--- a/SocialMediaApp.API/appsettings.json
+++ b/SocialMediaApp.API/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-HB8A0GJ;Database=SocialMediaApp;Integrated Security=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=DESKTOP-HB8A0GJ;Database=SocialMediaApp;Integrated Security=True;TrustServerCertificate=True;",
+    "RemoteConnection": "Server=db28226.public.databaseasp.net; Database=db28226; User Id=db28226; Password=G-d2?z3KF7#a; Encrypt=False; MultipleActiveResultSets=True;"
   },
   "JWT": {
     "IssuerIP": "http://localhost:5210",
